$Id: History,v 1.39 2001-10-23 08:13:59 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

23 oct 01: G.Cosmo (stand-V03-02-11)
- Minor fix to G4PAIxSection.cc, added inclusion of G4Material.hh to cope
  with latest updates included in materials-V03-02-04.

11 oct 01: mma (stand-V03-02-10)
- activate buildDEDXTable() in G4hIonisation::retrievePhysicsTable()

11 oct 01: G.Cosmo (stand-V03-02-09)
- G4VPAIenergyLoss.hh: removed redundant inclusion of RW wrapper header.
 
01 oct 01: mma (stand-V03-02-08)
- Phot,Comp,Conv,Annil: come back to BuildPhysicsTable(particleDefinition)
  invoked from the process manager
       
28 sep 01: mma (stand-V03-02-07)
- StorePhysicsTable(): ParticleName included in fileName.
  Completion of Store/Retrieve functions 
     
21 sep 01: mma (stand-V03-02-06)
- DoIt: fminimalEnergy = 1*eV in phot,comp,conv,anni     
     
19 sep 01: mma (stand-V03-02-05)
- come back to the previous ProcessNames
     
17 sep 01: mma (stand-V03-02-04)
- modifs in almost all classes for the migration of Materials to pure STL,
  but backward compatible with g4rw   

13 sep 01: L.Urban (stand-V03-02-03)
-G4VxEnergyLoss: min.delta cut is set as rcut/100 + some optimisation
    