@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4PAIonisation.hh,v 1.9 2001-07-11 10:03:28 gunter Exp $
+// $Id: G4PAIonisation.hh,v 1.10 2001-10-24 16:27:44 maire Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -166,8 +166,8 @@ class G4PAIonisation : public G4VPAIenergyLoss
 
     // cut in range
 
-    G4double CutInRange ;
-    G4double lastCutInRange ;
+    G4double* CutInRange ;
+    G4double* lastCutInRange ;
 
     // particles , cuts in kinetic energy 
 
