@@ -1,4 +1,4 @@
-$Id: History,v 1.39 2001-10-23 08:13:59 gcosmo Exp $
+$Id: History,v 1.40 2001-10-24 16:27:43 maire Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,7 +16,11 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
-
+     
+23 oct 01: mma (stand-V03-02-12)
+- cut per material: Ve(h)EnergyLoss, e(h)Ionisation, eBremsstrahlung,
+  PAIEnergyLoss, PAIonisation, SynchrotronRadiation     
+     
 23 oct 01: G.Cosmo (stand-V03-02-11)
 - Minor fix to G4PAIxSection.cc, added inclusion of G4Material.hh to cope
   with latest updates included in materials-V03-02-04.
